k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
  namespace: oauth
spec:
  selector:
    app: oauth
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
